# thd75-fw

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: FORMAT.md  USAGE.md
loaders/: README.md  ghidra_thd75.py  ida_thd75.py
src/thd75_fw/: __init__.py  cli.py  file_cipher.py  images.py  intel_hex.py  kex.py  patch.py  resource.py  sections.py  serial_cipher.py  voice.py
src/thd75_fw/patches/: pf-screen-capture.toml
tests/: conftest.py  test_cli.py  test_file_cipher.py  test_images.py  test_intel_hex.py  test_kex.py  test_patch.py  test_patch_properties.py  test_resource.py  test_sections.py  test_serial_cipher.py  test_voice.py
